--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
